--- a/lib/govuk_template.html
+++ b/lib/govuk_template.html
@@ -79,7 +79,7 @@
       <div class="header-wrapper">
         <div class="header-global">
           <div class="header-logo">
-            <a href="{{ homepage_url|default('https://www.gov.uk') }}" title="{{ logo_link_title|default('Go to the GOV.UK homepage') }}" id="logo" class="content">
+            <a href="{{ homepage_url|default('/') }}" title="{{ logo_link_title|default('Go to the homepage') }}" id="logo" class="content">
               <img src="{{ asset_path }}images/gov.uk_logotype_crown_invert_trans.png?0.16.0" width="35" height="31" alt=""> {{ global_header_text|default('GOV.UK') }}
             </a>
           </div>
